# random

./: .ccsproject  .cproject  .gitignore  .project  BUILD.md  Board.h  CMakeLists.txt  CMakePresets.json  EK_TM4C129EXL.c  GamepadInput.c  GamepadInput.h  LICENSE  README.md  StepperControl.c  TODO.md  connectionManager.c  connectionManager.h  hardwareController.c  hardwareController.h  random.c  random.cfg  randomDefaultServer.c  readme_config.md
.codex/: README.md
.config/xconfig_random/: .buildtime  .xdcenv.mak  compiler.opt  compiler.opt.defs  config.bld  custom.mak  package.bld  package.mak  package.xdc
.config/xconfig_random/package/: package.bld.xml  package.defs.h  package.xdc.dep  package.xdc.inc  package_xconfig_random.c  xconfig_random.ccs  xconfig_random.java
.config/xconfig_random/package/cfg/: random_pem4f.cfg  random_pem4f.mak
.launches/: random.launch  serverDevice.launch
.theia/: launch.json
Debug/: ccsObjs.opt  makefile  random.x1  random.x2  random.x3  random_linkInfo.xml  serverDevice_linkInfo.xml  subdir_rules.mk  subdir_vars.mk
Debug/configPkg/: compiler.opt  compiler.opt.defs  custom.mak  package.bld  package.mak
Debug/configPkg/package/: configPkg.ccs  package.bld.xml
Debug/configPkg/package/cfg/: random.xem4f.mak  random_pem4f.c  random_pem4f.cfg  random_pem4f.cfg.dot  random_pem4f.cfg.mak  random_pem4f.cfg.xml  random_pem4f.dep  random_pem4f.mak  random_pem4f.oem4f  random_pem4f.oem4f.dep  random_pem4f.rov.xs  random_pem4f.xdc.inc  random_pem4f.xdl
app/: main.c
app/comms/: connection_manager.c  server.c  server.h  uart_interface.c
app/hardware/: dc_motor_control.c  stepper_control.h
app/input/: gamepad_input.c
cmake/: sysbios.cmake  toolchain-arm-none-eabi.cmake
communication/: connectionManager.c  connectionManager.h  connection_defaults.h  connection_manager.c
debug/: flash_verify.gdb  hang_bt.gdb  inspect.gdb  probe_hang.gdb
defaultServer/: randomDefaultServer.c  randomDefaultServer.h
docs/: adding-ndk.md  flashing-and-console.md  newlib-locking-port.md  openocd-gdb-debugging.md  quirks.md  regenerating-sysbios-config.md  tivac-cmake-migration.md  uart-console-retarget.md  vendoring-ti-driver-sources.md  wsl_flashing.md
gamepad/: GamepadInput.c  GamepadInput.h  gamepad_input.c
hardware/: dcMotorControl.c  dcMotorControl.h  dc_motor_control.c  dc_motor_control.h  stepperControl.c  stepper_control.h
linker/: tm4c129encpdt.lds
server/: inet.c  inet.h  server.c  server.h  udp_discovery.c  udp_discovery.h
src/: makefile.libs  newlib_locks.c  syscalls_uart.c
src/sysbios/: makefile  sysbios.aem4f
tools/: generate-bios-config.sh  vendor-sdk.sh
uart/: uart_if.c  uart_interface.c  uart_interface.h
xCon/app/: main.c
xCon/app/comms/: comms_config.h  connection_manager.c  connection_manager.h  net_session.c  net_session.h  relay_client.c  relay_client.h  server.c  server.h  uart_interface.c  uart_interface.h  udp_discovery.c  udp_discovery.h
xCon/app/console/: cmdline.c  console.c  console.h  console_commands.c
xCon/app/hardware/: dc_motor_control.c  dc_motor_control.h  stepper_control.c  stepper_control.h
xCon/app/input/: gamepad_input.c  gamepad_input.h
xCon/bsp/: EK_TM4C129EXL.c  EK_TM4C129EXL.h  uart_interface.c  uart_interface.h
xCon/cmake/: toolchain-arm-none-eabi.cmake
xCon/linker/: tm4c129encpdt.lds
xCon/sysbios/: CMakeLists.txt  newlib_locks.c  sysbios.cmake  syscalls_uart.c
xCon/sysbios/legacy/: makefile.libs
xCon/sysbios/legacy/sysbios/: makefile  sysbios.aem4f
xCon/tivaware/: CMakeLists.txt
